[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/cave_story.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://src/main_menu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/GitHub.png" type="Texture" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_right = 128.0
alignment = 1

[node name="icon" type="TextureRect" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 276.0
rect_min_size = Vector2( 256, 256 )
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 280.0
margin_right = 256.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 4 )
text = "PongPing"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 256.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="P1VSP2" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 256.0
margin_bottom = 62.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "P1 VS P2"

[node name="P1VSAI" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 256.0
margin_bottom = 86.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "P1 VS AI"

[node name="AIVSP2" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 256.0
margin_bottom = 110.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "AI VS P2"

[node name="AIVSAI" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 256.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "AI VS AI"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 256.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 16 )

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 256.0
margin_bottom = 178.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "SETTINGS"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 256.0
margin_bottom = 198.0
rect_min_size = Vector2( 0, 16 )

[node name="GitHub" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_left = 112.0
margin_top = 202.0
margin_right = 144.0
margin_bottom = 234.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/VBoxContainer/P1VSP2" to="." method="_on_P1VSP2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/P1VSAI" to="." method="_on_P1VSAI_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/AIVSP2" to="." method="_on_AIVSP2_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/AIVSAI" to="." method="_on_AIVSAI_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/GitHub" to="." method="_on_GitHub_pressed"]
